# DaWastehBot

./: .env.example  .gitattributes  .gitignore  README.md  cli_backends.py  config.py  conftest.py  get_twitch_ids.py  llm_profiles.py  pandabot.py  pandabot_gui.py  pyproject.toml  requirements-gui.txt  requirements.txt  start_gui.bat  start_gui.sh  start_pandabot.bat
.github/workflows/: ci.yml
tests/: test_cli_backends.py  test_llm_profiles.py  test_pandabot.py
