[project]
name = "pandabot"
version = "1.3.0"
description = "Lokaler KI-Chatbot für Twitch mit TwitchIO 3 und llama-server"
requires-python = ">=3.11"

[tool.ruff]
# Nur unseren eigenen Code prüfen, keine Abhängigkeiten / Caches.
target-version = "py311"
line-length = 100
extend-exclude = [
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
# Pragmatischer Satz: Pyflakes, pycodestyle, isort, bugbear, comprehensions,
# pyupgrade. Bewusst ohne die sehr strengen Doc-/Annotation-Regeln.
select = ["E", "F", "W", "I", "B", "C4", "UP"]
ignore = [
    "E501",  # Zeilenlänge übernimmt der Formatter.
    "B008",  # Funktionsaufrufe in Argument-Defaults (bei dataclass-field bewusst).
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
